Bug 1490789 - Apply shift when calculating old area of invalidated frame r=miko

When calculating which regions of a layer to invalidate we usually
apply a shift to the area to account for changes in scroll offset. For
items within flattened transforms we do not do this, because the
transform itself includes the scroll offset. However, when calculating
the old area of an invalidated frame, we use the old transform. This
includes the previous scroll offset rather than the current, so we
must therefore still apply the shift.

Not doing so was causing the incorrect region to be invalidated, and
content to be rendered at the wrong location.

Differential Revision: https://phabricator.services.mozilla.com/D8080